- Update "GET SERVERPREFS" command to get streaming URL cookie check setting for Claris FileMaker Server 19.3.2. (Usage: "fmcsadmin get serverprefs AuthenticatedStream")
- Update "SET SERVERPREFS" command to set streaming URL cookie check setting for Claris FileMaker Server 19.3.2. (Usage: "fmcsadmin set serverprefs AuthenticatedStream=1")
- Improve error handling in case of detecting server-side error.
- Suppress outputting error messages for debugging.
- Add an error message for the FileMaker error code 20501.
- Built with Go 1.16.

Version: 1.2.0
Date: February 17, 2021
- Support Claris FileMaker Server for Linux.
- Add "DELETE" command to delete a schedule.
- Support "PLUGINS" type of "LIST" command to list Database Server calculation plug-ins for Claris FileMaker Server 19.2.1.
- Add "CERTIFICATE" command to manage SSL certificates for Claris FileMaker Server 19.2.1.
- Modify behavior of "GET CWPCONFIG" command and "SET CWPCONFIG" command on Linux.
- Modify behavior of outputting error messages for invalid parameters when using "GET CWPCONFIG", "GET SERVERCONFIG", "SET CWPCONFIG" and "SET SERVERCONFIG" command.
- Modify behavior of outputting error messages for unavailable commands when using "GET SERVERPREFS" command and "SET SERVERPREFS" command.
- Change error code for unavailable commands when using "GET SERVERPREFS" command and "SET SERVERPREFS" command.
- Modify behavior of "DISABLE" command without "-y" or "--yes" option.
- Add error messages for the FileMaker error code 21, 20402, 20405, 20406, 20408, 20630 and 20632.
- Update error messages for the FileMaker error code -1 and 1708.
- Built with Go 1.15.
- [INFO] Drop support for macOS High Sierra 10.13.
- [BUG FIX] Fix compatibility with Claris FileMaker Server 19.1.2 or later when using "SET SERVERCONFIG" command and "SET SERVERPREFS" command.

Version: 1.1.0
Date: June 17, 2020
- Support "--savekey" option of "OPEN" command for FileMaker Server 19.